charts/upload-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: upload-service
    labels:
        app: upload-service
        environment: production
spec:
    replicas: 2
    selector:
        matchLabels:
            app: upload-service
    template:
        metadata:
            labels:
                app: upload-service
        spec:
            containers:
                -   name: upload-service
                    image: vitaliiseniuk/upload-service:latest
                    ports:
                        - containerPort: 8081
                    readinessProbe:
                        httpGet:
                            path: /actuator/health
                            port: 8081
                        initialDelaySeconds: 5
                        periodSeconds: 10
                    livenessProbe:
                        httpGet:
                            path: /actuator/health
                            port: 8081
                        initialDelaySeconds: 10
                        periodSeconds: 15
                    resources:
                        requests:
                            memory: "512Mi"
                            cpu: "1000m"
                        limits:
                            memory: "1024Mi"
                            cpu: "2000m"
