charts/upload-service/service.yml
apiVersion: v1
kind: Service
metadata:
    name: upload-service
    labels:
        app: upload-service
        environment: production
spec:
    selector:
        app: upload-service
    ports:
        -   protocol: TCP
            port: 8081
            targetPort: 8081
            nodePort: 30081  # Optional: specify a static NodePort
    type: NodePort
